@@ -1,5 +1,6 @@
 Version 2.02.96 - 
 ================================
+  Support improperly formated device numbers in /proc/devices (2.02.91).
   Fix fsadm propagation of -e option.
   Fix fsadm parsing of /proc/mounts files (don't check for substrings).
   Fix fsadm usage of arguments with space.
